[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
local = []
dev = []
prod = []

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
anyhow = "1.0.64"
once_cell = "1.14.0"
toml = "0.5.9"
