[package]
name = "explorer-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.1", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.21.0", features = ["sync", "macros", "parking_lot"] }
anyhow = "1.0.64"
explorer-types = { path = "../types", version = "0.1.0", features = [
    "database",
] }
